Fix issue with duplicate file names in different locations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,14 @@
       "strict": true,
       "esModuleInterop": true
     },
-    "exclude": ["node_modules", ".vscode-test", "**/*.tsx", "**/*.scss"]
+    "exclude": [
+      "node_modules", 
+      ".vscode-test", 
+      "**/*.tsx", 
+      "**/*.scss", 
+      "src/tests",
+      "**/*.test.ts",
+      "**/*.test.tsx"
+    ]
   }
   
