--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vscode": "^1.50.0"
   },
   "scripts": {
-    "compile": "tsc -p ./"
+    "compile": "tsc -p ./",
+    "test": "jest"
   },
   "main": "./out/extension.js",
   "contributes": {
@@ -25,10 +26,13 @@
   ],
   "devDependencies": {
     "@types/babel__traverse": "^7.20.6",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.8.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^4.0.3",
     "vscode": "^1.1.37"
   },
